--- a/inria/Code/requirements.txt
+++ b/inria/Code/requirements.txt
@@ -5,12 +5,12 @@ anaconda-project==0.8.3
 aniso8601==9.0.1
 argh==0.26.2
 asn1crypto==1.3.0
-astroid
+astroid==2.4.2
 astropy==4.0.1.post1
 async-timeout==3.0.1
 atomicwrites==1.4.0
 attrs==20.3.0
-autopep8
+autopep8==1.5.3
 Babel==2.8.0
 backcall==0.2.0
 backports.shutil-get-terminal-size==1.0.0
@@ -18,11 +18,11 @@ banal==1.0.6
 beautifulsoup4==4.9.1
 bio==0.0.1
 biopython==1.77
-bitarray
+bitarray==1.4.0
 bkcharts==0.2
 bleach==3.1.5
 blis==0.7.4
-bokeh
+bokeh==2.1.1
 boto==2.49.0
 Bottleneck==1.3.2
 bpemb==0.3.2
@@ -44,17 +44,17 @@ cryptography==3.0
 cssselect==1.1.0
 cycler==0.10.0
 cymem==2.0.5
-Cython
+Cython==0.29.21
 cytoolz==0.10.1
-dask
+dask==2.20.0
 dataclasses==0.6
 DateTime==4.3
 decorator==4.4.2
 defusedxml==0.6.0
 Deprecated==1.2.10
 dicttoxml==1.7.4
-diff-match-patch
-distributed
+diff-match-patch==20200713
+distributed==2.20.0
 docutils==0.16
 emoji==1.2.0
 entrypoints==0.3
@@ -69,6 +69,9 @@ flair==0.8.0.post1
 flake8==3.8.3
 Flask==1.1.2
 Flask-RESTful==0.3.9
+fr-core-news-lg==3.0.0
+fr-core-news-md==3.0.0
+fr-dep-news-trf==3.0.0
 fsspec==0.7.4
 ftfy==6.0.3
 future==0.18.2
@@ -77,7 +80,7 @@ gensim==3.8.3
 geocoder==1.38.1
 geograpy3==0.1.24
 geoip2==4.2.0
-gevent
+gevent==20.6.2
 glob2==0.7
 gmpy2==2.0.8
 greenlet==0.4.16
@@ -85,22 +88,22 @@ gunicorn==20.1.0
 h5py==2.10.0
 HeapDict==1.0.1
 html2text==2020.1.16
-html5lib
+html5lib==1.1
 huggingface-hub==0.0.12
 hyperopt==0.2.5
-idna
+idna==2.10
 idna-ssl==1.1.0
-imageio
+imageio==2.9.0
 imagesize==1.2.0
-immutables
+immutables==0.14
 importlib-metadata==4.5.0
 iniconfig==1.1.1
 intervaltree==3.1.0
 ip2geotools==0.1.5
 IP2Location==8.6.0
 ipinfo==4.2.0
-ipykernel
-ipython
+ipykernel==5.3.2
+ipython==7.16.1
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
 isodate==0.6.0
@@ -108,7 +111,7 @@ isort==4.3.21
 itsdangerous==1.1.0
 Janome==0.4.1
 jdcal==1.4.1
-jedi
+jedi==0.17.1
 jeepney==0.4.3
 jellyfish==0.8.2
 jieba3k==0.35.1
@@ -118,12 +121,12 @@ JPype1==1.3.0
 json5==0.9.5
 jsonschema==3.2.0
 jupyter==1.0.0
-jupyter-client
+jupyter-client==6.1.6
 jupyter-console==6.1.0
 jupyter-core==4.6.3
 jupyterlab==2.1.5
-jupyterlab-server
-keyring
+jupyterlab-server==1.2.0
+keyring==21.2.1
 kiwisolver==1.3.1
 konoha==4.6.5
 langdetect==1.0.8
@@ -133,7 +136,7 @@ lexicons-builder==0.1.6
 libarchive-c==2.9
 llvmlite==0.33.0+1.g022ab0f
 locket==0.2.0
-lxml
+lxml==4.5.2
 MarkupSafe==1.1.1
 matplotlib==3.3.3
 maxminddb==2.0.3
@@ -154,16 +157,16 @@ nbconvert==5.6.1
 nbformat==5.0.7
 networkx==2.5
 newspaper3k==0.2.8
-nltk
+nltk==3.5
 nose==1.3.7
 notebook==6.0.3
 numba==0.50.1
 numexpr==2.7.1
 numpy==1.19.4
-numpydoc
+numpydoc==1.1.0
 olefile==0.46
 opencv-python==4.4.0.42
-openpyxl
+openpyxl==3.0.4
 overrides==3.1.0
 packaging==20.4
 pandas==1.1.1
@@ -182,6 +185,7 @@ pexpect==4.8.0
 pickleshare==0.7.5
 pikepdf==1.19.0
 Pillow==8.0.1
+pip==20.1.1
 pip-review==1.1.0
 pkginfo==1.5.0.1
 plac==1.2.0
@@ -193,24 +197,24 @@ prompt-toolkit==3.0.5
 protobuf==3.14.0
 psutil==5.7.3
 ptyprocess==0.6.0
-py
-py-heideltime @ git+https://github.com/JMendes1995/py_heideltime.git@fc5a81692e73e0c6ed59bf002d1c0afa506f2d39
+py==1.9.0
+py-heideltime==2.0
 pybind11==2.6.2
 pycodestyle==2.6.0
 pycorenlp==0.3.0
 pycosat==0.6.3
 pycountry==20.7.3
-pycparser
+pycparser==2.20
 pycrypto==2.6.1
 pycurl==7.43.0.5
 pydantic==1.7.4
-pydocstyle
+pydocstyle==5.0.2
 pyflakes==2.2.0
 Pygments==2.6.1
-pylint
+pylint==2.5.3
 pylodstorage==0.0.32
-pyodbc===4.0.0-unsupported
-pyOpenSSL
+pyodbc==4.0.0-unsupported
+pyOpenSSL==19.1.0
 pyparsing==2.4.7
 PyPDF2==1.26.0
 pyquery==1.4.3
@@ -219,8 +223,8 @@ PySocks==1.7.1
 pytest==6.1.2
 python-dateutil==2.8.1
 python-dotenv==0.15.0
-python-jsonrpc-server
-python-language-server
+python-jsonrpc-server==0.3.4
+python-language-server==0.34.1
 pytz==2020.1
 PyWavelets==1.1.1
 pyxdg==0.26
@@ -228,7 +232,7 @@ PyYAML==5.3.1
 pyzmq==19.0.1
 QDarkStyle==2.8.1
 QtAwesome==0.7.2
-qtconsole
+qtconsole==4.7.5
 QtPy==1.9.0
 ratelim==0.1.6
 rdflib==5.0.0
@@ -251,6 +255,7 @@ segtok==1.5.10
 selenium==3.141.0
 Send2Trash==1.5.0
 sentencepiece==0.1.95
+setuptools==57.0.0
 sgmllib3k==1.0.0
 simplegeneric==0.8.1
 singledispatch==3.4.0.3
@@ -265,7 +270,7 @@ spacy-alignments==0.8.3
 spacy-legacy==3.0.6
 spacy-transformers==1.0.3
 SPARQLWrapper==1.8.5
-Sphinx
+Sphinx==3.1.2
 sphinx-rtd-theme==0.5.2
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
@@ -273,16 +278,16 @@ sphinxcontrib-htmlhelp==1.0.3
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
-sphinxcontrib-websupport
-spyder
-spyder-kernels
-SQLAlchemy
+sphinxcontrib-websupport==1.2.3
+spyder==4.1.4
+spyder-kernels==1.9.2
+SQLAlchemy==1.3.18
 sqlitedict==1.7.0
 srsly==2.4.1
 stanfordnlp==0.2.0
 stanza==1.2.1
 statsmodels==0.11.1
-sympy
+sympy==1.6.1
 tables==3.6.1
 tabulate==0.8.7
 tblib==1.6.0
@@ -290,7 +295,7 @@ termcolor==1.1.0
 terminado==0.8.3
 testpath==0.4.4
 thinc==8.0.5
-threadpoolctl
+threadpoolctl==2.1.0
 tika==1.24
 tinysegmenter==0.3
 tldextract==3.1.0
@@ -314,18 +319,19 @@ Unidecode==1.2.0
 urllib3==1.24.3
 values==2020.12.3
 wasabi==0.8.2
-watchdog
-wcwidth
+watchdog==0.10.3
+wcwidth==0.2.5
 webencodings==0.5.1
 Werkzeug==1.0.1
+wheel==0.34.2
 widgetsnbextension==3.5.1
 wptools==0.4.17
 wrapt==1.12.1
-wurlitzer
+wurlitzer==2.0.1
 xlrd==1.2.0
 XlsxWriter==1.2.9
 xlwt==1.3.0
-yapf
+yapf==0.30.0
 yarl==1.6.3
 zict==2.0.0
 zipp==3.4.0
