--- a/inria/Code/requirements.txt
+++ b/inria/Code/requirements.txt
@@ -1,424 +1,339 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-_libgcc_mutex=0.1=main
-aiohttp=3.7.4.post0=pypi_0
-alabaster=0.7.12=py36_0
-anaconda=2020.07=py36_0
-anaconda-client=1.7.2=py36_0
-anaconda-project=0.8.4=py_0
-aniso8601=9.0.1=pypi_0
-argh=0.26.2=py36_0
-asn1crypto=1.3.0=py36_0
-astroid=2.4.2=py36_0
-astropy=4.0.1.post1=py36h7b6447c_1
-async-timeout=3.0.1=pypi_0
-atomicwrites=1.4.0=py_0
-attrs=20.3.0=pypi_0
-autopep8=1.5.3=py_0
-babel=2.8.0=py_0
-backcall=0.2.0=py_0
-backports=1.0=py_2
-backports.shutil_get_terminal_size=1.0.0=py36_2
-banal=1.0.6=pypi_0
-beautifulsoup4=4.9.1=py36_0
-bio=0.0.1=pypi_0
-biopython=1.77=pypi_0
-bitarray=1.4.0=py36h7b6447c_0
-bkcharts=0.2=py36_0
-blas=1.0=mkl
-bleach=3.1.5=py_0
-blis=0.7.4=pypi_0
-blosc=1.19.0=hd408876_0
-bokeh=2.1.1=py36_0
-boto=2.49.0=py36_0
-bottleneck=1.3.2=py36heb32a55_1
-bpemb=0.3.2=pypi_0
-brotlipy=0.7.0=py36h7b6447c_1000
-bs4=0.0.1=pypi_0
-bzip2=1.0.8=h7b6447c_0
-ca-certificates=2020.6.24=0
-cachetools=4.2.2=pypi_0
-cairo=1.14.12=h8948797_3
-camelot-py=0.8.2=pypi_0
-catalogue=2.0.4=pypi_0
-certifi=2020.11.8=pypi_0
-cffi=1.14.2=pypi_0
-chardet=3.0.4=py36_1003
-click=7.1.2=py_0
-cloudpickle=1.6.0=pypi_0
-clyent=1.2.2=py36_1
-colorama=0.4.3=py_0
-contextlib2=0.6.0.post1=py_0
-contextvars=2.4=py_0
-cryptography=3.0=pypi_0
-cssselect=1.1.0=pypi_0
-curl=7.71.1=hbc83047_1
-cycler=0.10.0=py36_0
-cymem=2.0.5=pypi_0
-cython=0.29.21=py36he6710b0_0
-cytoolz=0.10.1=py36h7b6447c_0
-dask=2.20.0=py_0
-dask-core=2.20.0=py_0
-dataclasses=0.6=pypi_0
-datetime=4.3=pypi_0
-dbus=1.13.16=hb2f20db_0
-decorator=4.4.2=py_0
-defusedxml=0.6.0=py_0
-deprecated=1.2.10=pypi_0
-dicttoxml=1.7.4=pypi_0
-diff-match-patch=20200713=py_0
-distributed=2.20.0=py36_0
-docutils=0.16=py36_1
-emoji=1.2.0=pypi_0
-entrypoints=0.3=py36_0
-et_xmlfile=1.0.1=py_1001
-expat=2.2.9=he6710b0_2
-fake-useragent=0.1.11=pypi_0
-fastcache=1.1.0=py36h7b6447c_0
-fasttext=0.9.2=pypi_0
-feedfinder2=0.0.4=pypi_0
-feedparser=6.0.6=pypi_0
-filelock=3.0.12=py_0
-flair=0.8.0.post1=pypi_0
-flake8=3.8.3=py_0
-flask=1.1.2=py_0
-flask-restful=0.3.9=pypi_0
-fontconfig=2.13.0=h9420a91_0
-fr-core-news-lg=3.0.0=pypi_0
-fr-core-news-md=3.0.0=pypi_0
-fr-dep-news-trf=3.0.0=pypi_0
-freetype=2.10.2=h5ab3b9f_0
-fribidi=1.0.9=h7b6447c_0
-fsspec=0.7.4=py_0
-ftfy=6.0.3=pypi_0
-future=0.18.2=py36_1
-gdown=3.12.2=pypi_0
-gensim=3.8.3=pypi_0
-geocoder=1.38.1=pypi_0
-geograpy3=0.1.24=pypi_0
-geoip2=4.2.0=pypi_0
-get_terminal_size=1.0.0=haa9412d_0
-gevent=20.6.2=py36h7b6447c_0
-glib=2.65.0=h3eb4bd4_0
-glob2=0.7=py_0
-gmp=6.1.2=h6c8ec71_1
-gmpy2=2.0.8=py36h10f8cd9_2
-graphite2=1.3.14=h23475e2_0
-greenlet=0.4.16=py36h7b6447c_0
-gst-plugins-base=1.14.0=hbbd80ab_1
-gstreamer=1.14.0=hb31296c_0
-gunicorn=20.1.0=pypi_0
-h5py=2.10.0=py36h7918eee_0
-harfbuzz=2.4.0=hca77d97_1
-hdf5=1.10.4=hb1b8bf9_0
-heapdict=1.0.1=py_0
-html2text=2020.1.16=pypi_0
-html5lib=1.1=py_0
-huggingface-hub=0.0.12=pypi_0
-hyperopt=0.2.5=pypi_0
-icu=58.2=he6710b0_3
-idna=2.10=py_0
-idna-ssl=1.1.0=pypi_0
-imageio=2.9.0=py_0
-imagesize=1.2.0=py_0
-immutables=0.14=py36h7b6447c_0
-importlib-metadata=4.5.0=pypi_0
-importlib_metadata=1.7.0=0
-iniconfig=1.1.1=pypi_0
-intel-openmp=2020.1=217
-intervaltree=3.1.0=pypi_0
-ip2geotools=0.1.5=pypi_0
-ip2location=8.6.0=pypi_0
-ipinfo=4.2.0=pypi_0
-ipykernel=5.3.2=py36h5ca1d4c_0
-ipython=7.16.1=py36h5ca1d4c_0
-ipython_genutils=0.2.0=py36_0
-ipywidgets=7.5.1=py_0
-isodate=0.6.0=pypi_0
-isort=4.3.21=py36_0
-itsdangerous=1.1.0=py36_0
-janome=0.4.1=pypi_0
-jbig=2.1=hdba287a_0
-jdcal=1.4.1=py_0
-jedi=0.17.1=py36_0
-jeepney=0.4.3=py_0
-jellyfish=0.8.2=pypi_0
-jieba3k=0.35.1=pypi_0
-jinja2=2.11.2=py_0
-joblib=0.17.0=pypi_0
-jpeg=9b=h024ee3a_2
-jpype1=1.3.0=pypi_0
-json5=0.9.5=py_0
-jsonschema=3.2.0=py36_0
-jupyter=1.0.0=py36_7
-jupyter_client=6.1.6=py_0
-jupyter_console=6.1.0=py_0
-jupyter_core=4.6.3=py36_0
-jupyterlab=2.1.5=py_0
-jupyterlab_server=1.2.0=py_0
-keyring=21.2.1=py36_0
-kiwisolver=1.3.1=pypi_0
-konoha=4.6.5=pypi_0
-krb5=1.18.2=h173b8e3_0
-langdetect=1.0.8=pypi_0
-languagecodes=1.0.9=pypi_0
-lazy-object-proxy=1.4.3=py36h7b6447c_0
-lcms2=2.11=h396b838_0
-ld_impl_linux-64=2.33.1=h53a641e_7
-lexicons-builder=0.1.6=pypi_0
-libarchive=3.4.2=h62408e4_0
-libcurl=7.71.1=h20c2e04_1
-libedit=3.1.20191231=h14c3975_1
-libffi=3.3=he6710b0_2
-libgcc-ng=9.1.0=hdf63c60_0
-libgfortran-ng=7.3.0=hdf63c60_0
-liblief=0.10.1=he6710b0_0
-libllvm9=9.0.1=h4a3c616_1
-libpng=1.6.37=hbc83047_0
-libsodium=1.0.18=h7b6447c_0
-libspatialindex=1.9.3=he6710b0_0
-libssh2=1.9.0=h1ba5d50_1
-libstdcxx-ng=9.1.0=hdf63c60_0
-libtiff=4.1.0=h2733197_1
-libtool=2.4.6=h7b6447c_5
-libuuid=1.0.3=h1bed415_2
-libxcb=1.14=h7b6447c_0
-libxml2=2.9.10=he19cac6_1
-libxslt=1.1.34=hc22bd24_0
-llvmlite=0.33.0=py36hc6ec683_1
-locket=0.2.0=py36_1
-lxml=4.5.2=py36hefd8a0e_0
-lz4-c=1.9.2=he6710b0_0
-lzo=2.10=h7b6447c_2
-markupsafe=1.1.1=py36h7b6447c_0
-matplotlib=3.3.3=pypi_0
-maxminddb=2.0.3=pypi_0
-mccabe=0.6.1=py36_1
-mistune=0.8.4=py36h7b6447c_0
-mkl=2020.1=217
-mkl-service=2.3.0=py36he904b0f_0
-mkl_fft=1.1.0=py36h23d657b_0
-mkl_random=1.1.1=py36h0573a6f_0
-mock=4.0.2=py_0
-more-itertools=8.4.0=py_0
-mpc=1.1.0=h10f8cd9_1
-mpfr=4.0.2=hb69a4c5_1
-mpld3=0.3=pypi_0
-mpmath=1.1.0=py36_0
-msgpack-python=1.0.0=py36hfd86e86_1
-multidict=5.1.0=pypi_0
-multipledispatch=0.6.0=py36_0
-murmurhash=1.0.5=pypi_0
-nbconvert=5.6.1=py36_0
-nbformat=5.0.7=py_0
-ncurses=6.2=he6710b0_1
-networkx=2.5=pypi_0
-newspaper3k=0.2.8=pypi_0
-nltk=3.5=py_0
-nose=1.3.7=py36_2
-notebook=6.0.3=py36_0
-numba=0.50.1=py36h0573a6f_1
-numexpr=2.7.1=py36h423224d_0
-numpy=1.19.4=pypi_0
-numpydoc=1.1.0=py_0
-olefile=0.46=py36_0
-opencv-python=4.4.0.42=pypi_0
-openpyxl=3.0.4=py_0
-openssl=1.1.1g=h7b6447c_0
-overrides=3.1.0=pypi_0
-packaging=20.4=py_0
-pandas=1.1.1=pypi_0
-pandoc=2.10=0
-pandocfilters=1.4.2=py36_1
-pango=1.45.3=hd140c19_0
-parameterized=0.8.1=pypi_0
-parso=0.7.0=py_0
-partd=1.1.0=py_0
-patchelf=0.11=he6710b0_0
-path=13.1.0=py36_0
-path.py=12.4.0=0
-pathlib2=2.3.5=py36_0
-pathtools=0.1.2=py_1
-pathy=0.5.2=pypi_0
-patsy=0.5.1=py36_0
-pcre=8.44=he6710b0_0
-pdfminer-six=20200726=pypi_0
-pep8=1.7.1=py36_0
-pexpect=4.8.0=py36_0
-pickleshare=0.7.5=py36_0
-pikepdf=1.19.0=pypi_0
-pillow=8.0.1=pypi_0
-pip=20.1.1=py36_1
-pip-review=1.1.0=pypi_0
-pixman=0.40.0=h7b6447c_0
-pkginfo=1.5.0.1=py36_0
-plac=1.2.0=pypi_0
-pluggy=0.13.1=py36_0
-ply=3.11=py36_0
-preshed=3.0.5=pypi_0
-prometheus_client=0.8.0=py_0
-prompt-toolkit=3.0.5=py_0
-prompt_toolkit=3.0.5=0
-protobuf=3.14.0=pypi_0
-psutil=5.7.3=pypi_0
-ptyprocess=0.6.0=py36_0
-py=1.9.0=py_0
-py-heideltime=2.0=pypi_0
-py-lief=0.10.1=py36h403a769_0
-pybind11=2.6.2=pypi_0
-pycodestyle=2.6.0=py_0
-pycorenlp=0.3.0=pypi_0
-pycosat=0.6.3=py36h7b6447c_0
-pycountry=20.7.3=pypi_0
-pycparser=2.20=py_2
-pycrypto=2.6.1=py36h7b6447c_10
-pycurl=7.43.0.5=py36h1ba5d50_0
-pydantic=1.7.4=pypi_0
-pydocstyle=5.0.2=py_0
-pyflakes=2.2.0=py_0
-pygments=2.6.1=py_0
-pylint=2.5.3=py36_0
-pylodstorage=0.0.32=pypi_0
-pyodbc=4.0.30=py36he6710b0_0
-pyopenssl=19.1.0=py_1
-pyparsing=2.4.7=py_0
-pypdf2=1.26.0=pypi_0
-pyqt=5.9.2=py36h05f1152_2
-pyquery=1.4.3=pypi_0
-pyrsistent=0.16.0=py36h7b6447c_0
-pysocks=1.7.1=py36_0
-pytables=3.6.1=py36h71ec239_0
-pytest=6.1.2=pypi_0
-python=3.6.10=h7579374_2
-python-dateutil=2.8.1=py_0
-python-dotenv=0.15.0=pypi_0
-python-jsonrpc-server=0.3.4=py_1
-python-language-server=0.34.1=py36_0
-python-libarchive-c=2.9=py_0
-pytz=2020.1=py_0
-pywavelets=1.1.1=py36h7b6447c_0
-pyxdg=0.26=py_0
-pyyaml=5.3.1=py36h7b6447c_1
-pyzmq=19.0.1=py36he6710b0_1
-qdarkstyle=2.8.1=py_0
-qt=5.9.7=h5867ecd_1
-qtawesome=0.7.2=py_0
-qtconsole=4.7.5=py_0
-qtpy=1.9.0=py_0
-ratelim=0.1.6=pypi_0
-rdflib=5.0.0=pypi_0
-readline=8.0=h7b6447c_0
-readme-renderer=29.0=pypi_0
-regex=2020.11.13=pypi_0
-requests=2.25.0=pypi_0
-requests-file=1.5.1=pypi_0
-requests-toolbelt=0.9.1=pypi_0
-rfc3986=1.5.0=pypi_0
-ripgrep=11.0.2=he32d670_0
-rope=0.17.0=py_0
-rtree=0.9.4=py36_1
-ruamel_yaml=0.15.87=py36h7b6447c_1
-sacremoses=0.0.43=pypi_0
-scikit-image=0.16.2=py36h0573a6f_0
-scikit-learn=0.23.2=pypi_0
-scipy=1.5.4=pypi_0
-seaborn=0.10.1=py_0
-secretstorage=3.1.2=py36_0
-segtok=1.5.10=pypi_0
-selenium=3.141.0=pypi_0
-send2trash=1.5.0=py36_0
-sentencepiece=0.1.95=pypi_0
-setuptools=57.0.0=pypi_0
-sgmllib3k=1.0.0=pypi_0
-simplegeneric=0.8.1=py36_2
-singledispatch=3.4.0.3=py36_0
-sip=4.19.8=py36hf484d3e_0
-six=1.15.0=py_0
-smart-open=3.0.0=pypi_0
-snappy=1.1.8=he6710b0_0
-snowballstemmer=2.0.0=py_0
-sortedcollections=1.2.1=py_0
-sortedcontainers=2.2.2=py_0
-soupsieve=2.0.1=py_0
-spacy=3.0.6=pypi_0
-spacy-alignments=0.8.3=pypi_0
-spacy-legacy=3.0.6=pypi_0
-spacy-transformers=1.0.3=pypi_0
-sparqlwrapper=1.8.5=pypi_0
-sphinx=3.1.2=py_0
-sphinxcontrib=1.0=py36_1
-sphinxcontrib-applehelp=1.0.2=py_0
-sphinxcontrib-devhelp=1.0.2=py_0
-sphinxcontrib-htmlhelp=1.0.3=py_0
-sphinxcontrib-jsmath=1.0.1=py_0
-sphinxcontrib-qthelp=1.0.3=py_0
-sphinxcontrib-serializinghtml=1.1.4=py_0
-sphinxcontrib-websupport=1.2.3=py_0
-spyder=4.1.4=py36_0
-spyder-kernels=1.9.2=py36_0
-sqlalchemy=1.3.18=py36h7b6447c_0
-sqlite=3.32.3=h62c20be_0
-sqlitedict=1.7.0=pypi_0
-srsly=2.4.1=pypi_0
-stanfordnlp=0.2.0=pypi_0
-stanza=1.2.1=pypi_0
-statsmodels=0.11.1=py36h7b6447c_0
-sympy=1.6.1=py36_0
-tabulate=0.8.7=pypi_0
-tbb=2020.0=hfd86e86_0
-tblib=1.6.0=py_0
-termcolor=1.1.0=pypi_0
-terminado=0.8.3=py36_0
-testpath=0.4.4=py_0
-thinc=8.0.5=pypi_0
-threadpoolctl=2.1.0=pyh5ca1d4c_0
-tika=1.24=pypi_0
-tinysegmenter=0.3=pypi_0
-tk=8.6.10=hbc83047_0
-tldextract=3.1.0=pypi_0
-tokenizers=0.10.3=pypi_0
-toml=0.10.2=pypi_0
-toolz=0.10.0=py_0
-torch=1.7.1=pypi_0
-tornado=6.0.4=py36h7b6447c_1
-touch=2020.12.3=pypi_0
-tqdm=4.53.0=pypi_0
-traitlets=4.3.3=py36_0
-transformers=4.8.1=pypi_0
-twine=3.4.1=pypi_0
-typed-ast=1.4.1=py36h7b6447c_0
-typer=0.3.2=pypi_0
-typing=3.7.4.3=pypi_0
-typing-extensions=3.7.4.3=pypi_0
-ujson=1.35=py36h14c3975_0
-unicodecsv=0.14.1=py36_0
-unidecode=1.2.0=pypi_0
-unixodbc=2.3.7=h14c3975_0
-urllib3=1.24.3=pypi_0
-values=2020.12.3=pypi_0
-wasabi=0.8.2=pypi_0
-watchdog=0.10.3=py36_0
-wcwidth=0.2.5=py_0
-webencodings=0.5.1=py36_1
-werkzeug=1.0.1=py_0
-wheel=0.34.2=py36_0
-widgetsnbextension=3.5.1=py36_0
-wptools=0.4.17=pypi_0
-wrapt=1.12.1=pypi_0
-wurlitzer=2.0.1=py36_0
-xlrd=1.2.0=py36_0
-xlsxwriter=1.2.9=py_0
-xlwt=1.3.0=py36_0
-xz=5.2.5=h7b6447c_0
-yaml=0.2.5=h7b6447c_0
-yapf=0.30.0=py_0
-yarl=1.6.3=pypi_0
-zeromq=4.3.2=he6710b0_2
-zict=2.0.0=py_0
-zipp=3.4.0=pypi_0
-zlib=1.2.11=h7b6447c_3
-zope=1.0=py36_1
-zope.event=4.4=py36_0
-zope.interface=4.7.1=py36h7b6447c_0
-zstd=1.4.5=h0b5b093_0
+aiohttp==3.7.4.post0
+alabaster==0.7.12
+anaconda-client==1.7.2
+anaconda-project==0.8.3
+aniso8601==9.0.1
+argh==0.26.2
+asn1crypto==1.3.0
+astroid==2.4.2
+astropy==4.0.1.post1
+async-timeout==3.0.1
+atomicwrites==1.4.0
+attrs==20.3.0
+autopep8==1.5.3
+Babel==2.8.0
+backcall==0.2.0
+backports.shutil-get-terminal-size==1.0.0
+banal==1.0.6
+beautifulsoup4==4.9.1
+bio==0.0.1
+biopython==1.77
+bitarray==1.4.0
+bkcharts==0.2
+bleach==3.1.5
+blis==0.7.4
+bokeh==2.1.1
+boto==2.49.0
+Bottleneck==1.3.2
+bpemb==0.3.2
+brotlipy==0.7.0
+bs4==0.0.1
+cachetools==4.2.2
+camelot-py==0.8.2
+catalogue==2.0.4
+certifi==2020.11.8
+cffi==1.14.2
+chardet==3.0.4
+click==7.1.2
+cloudpickle==1.6.0
+clyent==1.2.2
+colorama==0.4.3
+contextlib2==0.6.0.post1
+contextvars==2.4
+cryptography==3.0
+cssselect==1.1.0
+cycler==0.10.0
+cymem==2.0.5
+Cython==0.29.21
+cytoolz==0.10.1
+dask==2.20.0
+dataclasses==0.6
+DateTime==4.3
+decorator==4.4.2
+defusedxml==0.6.0
+Deprecated==1.2.10
+dicttoxml==1.7.4
+diff-match-patch==20200713
+distributed==2.20.0
+docutils==0.16
+emoji==1.2.0
+entrypoints==0.3
+et-xmlfile==1.0.1
+fake-useragent==0.1.11
+fastcache==1.1.0
+fasttext==0.9.2
+feedfinder2==0.0.4
+feedparser==6.0.6
+filelock==3.0.12
+flair==0.8.0.post1
+flake8==3.8.3
+Flask==1.1.2
+Flask-RESTful==0.3.9
+fr-core-news-lg==3.0.0
+fr-core-news-md==3.0.0
+fr-dep-news-trf==3.0.0
+fsspec==0.7.4
+ftfy==6.0.3
+future==0.18.2
+gdown==3.12.2
+gensim==3.8.3
+geocoder==1.38.1
+geograpy3==0.1.24
+geoip2==4.2.0
+gevent==20.6.2
+glob2==0.7
+gmpy2==2.0.8
+greenlet==0.4.16
+gunicorn==20.1.0
+h5py==2.10.0
+HeapDict==1.0.1
+html2text==2020.1.16
+html5lib==1.1
+huggingface-hub==0.0.12
+hyperopt==0.2.5
+idna==2.10
+idna-ssl==1.1.0
+imageio==2.9.0
+imagesize==1.2.0
+immutables==0.14
+importlib-metadata==4.5.0
+iniconfig==1.1.1
+intervaltree==3.1.0
+ip2geotools==0.1.5
+IP2Location==8.6.0
+ipinfo==4.2.0
+ipykernel==5.3.2
+ipython==7.16.1
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+isodate==0.6.0
+isort==4.3.21
+itsdangerous==1.1.0
+Janome==0.4.1
+jdcal==1.4.1
+jedi==0.17.1
+jeepney==0.4.3
+jellyfish==0.8.2
+jieba3k==0.35.1
+Jinja2==2.11.2
+joblib==0.17.0
+JPype1==1.3.0
+json5==0.9.5
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.6
+jupyter-console==6.1.0
+jupyter-core==4.6.3
+jupyterlab==2.1.5
+jupyterlab-server==1.2.0
+keyring==21.2.1
+kiwisolver==1.3.1
+konoha==4.6.5
+langdetect==1.0.8
+languagecodes==1.0.9
+lazy-object-proxy==1.4.3
+lexicons-builder==0.1.6
+libarchive-c==2.9
+llvmlite==0.33.0+1.g022ab0f
+locket==0.2.0
+lxml==4.5.2
+MarkupSafe==1.1.1
+matplotlib==3.3.3
+maxminddb==2.0.3
+mccabe==0.6.1
+mistune==0.8.4
+mkl-fft==1.1.0
+mkl-random==1.1.1
+mkl-service==2.3.0
+mock==4.0.2
+more-itertools==8.4.0
+mpld3==0.3
+mpmath==1.1.0
+msgpack==1.0.0
+multidict==5.1.0
+multipledispatch==0.6.0
+murmurhash==1.0.5
+nbconvert==5.6.1
+nbformat==5.0.7
+networkx==2.5
+newspaper3k==0.2.8
+nltk==3.5
+nose==1.3.7
+notebook==6.0.3
+numba==0.50.1
+numexpr==2.7.1
+numpy==1.19.4
+numpydoc==1.1.0
+olefile==0.46
+opencv-python==4.4.0.42
+openpyxl==3.0.4
+overrides==3.1.0
+packaging==20.4
+pandas==1.1.1
+pandocfilters==1.4.2
+parameterized==0.8.1
+parso==0.7.0
+partd==1.1.0
+path==13.1.0
+pathlib2==2.3.5
+pathtools==0.1.2
+pathy==0.5.2
+patsy==0.5.1
+pdfminer.six==20200726
+pep8==1.7.1
+pexpect==4.8.0
+pickleshare==0.7.5
+pikepdf==1.19.0
+Pillow==8.0.1
+pip==20.1.1
+pip-review==1.1.0
+pkginfo==1.5.0.1
+plac==1.2.0
+pluggy==0.13.1
+ply==3.11
+preshed==3.0.5
+prometheus-client==0.8.0
+prompt-toolkit==3.0.5
+protobuf==3.14.0
+psutil==5.7.3
+ptyprocess==0.6.0
+py==1.9.0
+py-heideltime==2.0
+pybind11==2.6.2
+pycodestyle==2.6.0
+pycorenlp==0.3.0
+pycosat==0.6.3
+pycountry==20.7.3
+pycparser==2.20
+pycrypto==2.6.1
+pycurl==7.43.0.5
+pydantic==1.7.4
+pydocstyle==5.0.2
+pyflakes==2.2.0
+Pygments==2.6.1
+pylint==2.5.3
+pylodstorage==0.0.32
+pyodbc==4.0.0-unsupported
+pyOpenSSL==19.1.0
+pyparsing==2.4.7
+PyPDF2==1.26.0
+pyquery==1.4.3
+pyrsistent==0.16.0
+PySocks==1.7.1
+pytest==6.1.2
+python-dateutil==2.8.1
+python-dotenv==0.15.0
+python-jsonrpc-server==0.3.4
+python-language-server==0.34.1
+pytz==2020.1
+PyWavelets==1.1.1
+pyxdg==0.26
+PyYAML==5.3.1
+pyzmq==19.0.1
+QDarkStyle==2.8.1
+QtAwesome==0.7.2
+qtconsole==4.7.5
+QtPy==1.9.0
+ratelim==0.1.6
+rdflib==5.0.0
+readme-renderer==29.0
+regex==2020.11.13
+requests==2.25.0
+requests-file==1.5.1
+requests-toolbelt==0.9.1
+rfc3986==1.5.0
+rope==0.17.0
+Rtree==0.9.4
+ruamel-yaml==0.15.87
+sacremoses==0.0.43
+scikit-image==0.16.2
+scikit-learn==0.23.2
+scipy==1.5.4
+seaborn==0.10.1
+SecretStorage==3.1.2
+segtok==1.5.10
+selenium==3.141.0
+Send2Trash==1.5.0
+sentencepiece==0.1.95
+setuptools==57.0.0
+sgmllib3k==1.0.0
+simplegeneric==0.8.1
+singledispatch==3.4.0.3
+six==1.15.0
+smart-open==3.0.0
+snowballstemmer==2.0.0
+sortedcollections==1.2.1
+sortedcontainers==2.2.2
+soupsieve==2.0.1
+spacy==3.0.6
+spacy-alignments==0.8.3
+spacy-legacy==3.0.6
+spacy-transformers==1.0.3
+SPARQLWrapper==1.8.5
+Sphinx==3.1.2
+sphinx-rtd-theme==0.5.2
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
+sphinxcontrib-websupport==1.2.3
+spyder==4.1.4
+spyder-kernels==1.9.2
+SQLAlchemy==1.3.18
+sqlitedict==1.7.0
+srsly==2.4.1
+stanfordnlp==0.2.0
+stanza==1.2.1
+statsmodels==0.11.1
+sympy==1.6.1
+tables==3.6.1
+tabulate==0.8.7
+tblib==1.6.0
+termcolor==1.1.0
+terminado==0.8.3
+testpath==0.4.4
+thinc==8.0.5
+threadpoolctl==2.1.0
+tika==1.24
+tinysegmenter==0.3
+tldextract==3.1.0
+tokenizers==0.10.3
+toml==0.10.2
+toolz==0.10.0
+torch==1.7.1
+tornado==6.0.4
+touch==2020.12.3
+tqdm==4.53.0
+traitlets==4.3.3
+transformers==4.8.1
+twine==3.4.1
+typed-ast==1.4.1
+typer==0.3.2
+typing==3.7.4.3
+typing-extensions==3.7.4.3
+ujson==1.35
+unicodecsv==0.14.1
+Unidecode==1.2.0
+urllib3==1.24.3
+values==2020.12.3
+wasabi==0.8.2
+watchdog==0.10.3
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==1.0.1
+wheel==0.34.2
+widgetsnbextension==3.5.1
+wptools==0.4.17
+wrapt==1.12.1
+wurlitzer==2.0.1
+xlrd==1.2.0
+XlsxWriter==1.2.9
+xlwt==1.3.0
+yapf==0.30.0
+yarl==1.6.3
+zict==2.0.0
+zipp==3.4.0
+zope.event==4.4
+zope.interface==4.7.1
