--- a/inria/Code/requirements.txt
+++ b/inria/Code/requirements.txt
@@ -1,339 +1,111 @@
 aiohttp==3.7.4.post0
-alabaster==0.7.12
-anaconda-client==1.7.2
-anaconda-project==0.8.3
-aniso8601==9.0.1
-argh==0.26.2
-asn1crypto==1.3.0
-astroid==2.4.2
-astropy==4.0.1.post1
+astroid==2.6.2
 async-timeout==3.0.1
-atomicwrites==1.4.0
-attrs==20.3.0
-autopep8==1.5.3
-Babel==2.8.0
-backcall==0.2.0
-backports.shutil-get-terminal-size==1.0.0
-banal==1.0.6
-beautifulsoup4==4.9.1
-bio==0.0.1
-biopython==1.77
-bitarray==1.4.0
-bkcharts==0.2
-bleach==3.1.5
-blis==0.7.4
-bokeh==2.1.1
-boto==2.49.0
-Bottleneck==1.3.2
-bpemb==0.3.2
-brotlipy==0.7.0
-bs4==0.0.1
+attrs==21.2.0
+autopep8==1.5.7
+bleach==3.3.0
+bpemb==0.3.3
 cachetools==4.2.2
-camelot-py==0.8.2
-catalogue==2.0.4
-certifi==2020.11.8
-cffi==1.14.2
-chardet==3.0.4
-click==7.1.2
+certifi==2021.5.30
+cffi==1.14.6
+chardet==4.0.0
+click==8.0.1
 cloudpickle==1.6.0
-clyent==1.2.2
-colorama==0.4.3
-contextlib2==0.6.0.post1
-contextvars==2.4
-cryptography==3.0
+colorama==0.4.4
+cryptography==3.4.7
 cssselect==1.1.0
 cycler==0.10.0
-cymem==2.0.5
-Cython==0.29.21
-cytoolz==0.10.1
-dask==2.20.0
-dataclasses==0.6
+dataclasses==0.8
 DateTime==4.3
 decorator==4.4.2
-defusedxml==0.6.0
-Deprecated==1.2.10
+Deprecated==1.2.12
 dicttoxml==1.7.4
-diff-match-patch==20200713
-distributed==2.20.0
-docutils==0.16
-emoji==1.2.0
-entrypoints==0.3
-et-xmlfile==1.0.1
-fake-useragent==0.1.11
-fastcache==1.1.0
-fasttext==0.9.2
-feedfinder2==0.0.4
-feedparser==6.0.6
+docutils==0.17.1
 filelock==3.0.12
 flair==0.8.0.post1
-flake8==3.8.3
-Flask==1.1.2
-Flask-RESTful==0.3.9
-fr-core-news-lg==3.0.0
-fr-core-news-md==3.0.0
-fr-dep-news-trf==3.0.0
-fsspec==0.7.4
 ftfy==6.0.3
 future==0.18.2
 gdown==3.12.2
 gensim==3.8.3
 geocoder==1.38.1
-geograpy3==0.1.24
 geoip2==4.2.0
-gevent==20.6.2
-glob2==0.7
-gmpy2==2.0.8
-greenlet==0.4.16
-gunicorn==20.1.0
-h5py==2.10.0
-HeapDict==1.0.1
-html2text==2020.1.16
-html5lib==1.1
 huggingface-hub==0.0.12
 hyperopt==0.2.5
 idna==2.10
 idna-ssl==1.1.0
-imageio==2.9.0
-imagesize==1.2.0
-immutables==0.14
-importlib-metadata==4.5.0
-iniconfig==1.1.1
-intervaltree==3.1.0
+importlib-metadata==3.10.1
 ip2geotools==0.1.5
-IP2Location==8.6.0
-ipinfo==4.2.0
-ipykernel==5.3.2
-ipython==7.16.1
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
-isodate==0.6.0
-isort==4.3.21
-itsdangerous==1.1.0
+IP2Location==8.6.2
+ipinfo==4.2.1
+isort==5.9.2
 Janome==0.4.1
-jdcal==1.4.1
-jedi==0.17.1
-jeepney==0.4.3
-jellyfish==0.8.2
-jieba3k==0.35.1
-Jinja2==2.11.2
-joblib==0.17.0
-JPype1==1.3.0
-json5==0.9.5
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.1.6
-jupyter-console==6.1.0
-jupyter-core==4.6.3
-jupyterlab==2.1.5
-jupyterlab-server==1.2.0
-keyring==21.2.1
+jeepney==0.7.0
+joblib==1.0.1
+keyring==23.0.1
 kiwisolver==1.3.1
 konoha==4.6.5
-langdetect==1.0.8
-languagecodes==1.0.9
-lazy-object-proxy==1.4.3
-lexicons-builder==0.1.6
-libarchive-c==2.9
-llvmlite==0.33.0+1.g022ab0f
-locket==0.2.0
-lxml==4.5.2
-MarkupSafe==1.1.1
-matplotlib==3.3.3
+langdetect==1.0.9
+lazy-object-proxy==1.6.0
+lxml==4.6.3
+matplotlib==3.3.4
 maxminddb==2.0.3
 mccabe==0.6.1
-mistune==0.8.4
-mkl-fft==1.1.0
-mkl-random==1.1.1
-mkl-service==2.3.0
-mock==4.0.2
-more-itertools==8.4.0
 mpld3==0.3
-mpmath==1.1.0
-msgpack==1.0.0
 multidict==5.1.0
-multipledispatch==0.6.0
-murmurhash==1.0.5
-nbconvert==5.6.1
-nbformat==5.0.7
-networkx==2.5
-newspaper3k==0.2.8
-nltk==3.5
-nose==1.3.7
-notebook==6.0.3
-numba==0.50.1
-numexpr==2.7.1
-numpy==1.19.4
-numpydoc==1.1.0
-olefile==0.46
-opencv-python==4.4.0.42
-openpyxl==3.0.4
+networkx==2.5.1
+nltk==3.6.2
+numpy==1.19.5
 overrides==3.1.0
-packaging==20.4
-pandas==1.1.1
-pandocfilters==1.4.2
-parameterized==0.8.1
-parso==0.7.0
-partd==1.1.0
-path==13.1.0
-pathlib2==2.3.5
-pathtools==0.1.2
-pathy==0.5.2
-patsy==0.5.1
-pdfminer.six==20200726
-pep8==1.7.1
-pexpect==4.8.0
-pickleshare==0.7.5
-pikepdf==1.19.0
-Pillow==8.0.1
-pip==20.1.1
+packaging==21.0
+pandas==1.1.5
+Pillow==8.3.1
 pip-review==1.1.0
-pkginfo==1.5.0.1
-plac==1.2.0
-pluggy==0.13.1
-ply==3.11
-preshed==3.0.5
-prometheus-client==0.8.0
-prompt-toolkit==3.0.5
-protobuf==3.14.0
-psutil==5.7.3
-ptyprocess==0.6.0
-py==1.9.0
-py-heideltime==2.0
-pybind11==2.6.2
-pycodestyle==2.6.0
-pycorenlp==0.3.0
-pycosat==0.6.3
-pycountry==20.7.3
+pkg-resources==0.0.0
+pkginfo==1.7.1
+protobuf==3.17.3
+pycodestyle==2.7.0
 pycparser==2.20
-pycrypto==2.6.1
-pycurl==7.43.0.5
-pydantic==1.7.4
-pydocstyle==5.0.2
-pyflakes==2.2.0
-Pygments==2.6.1
-pylint==2.5.3
-pylodstorage==0.0.32
-pyodbc==4.0.0-unsupported
-pyOpenSSL==19.1.0
+Pygments==2.9.0
+pylint==2.9.3
 pyparsing==2.4.7
-PyPDF2==1.26.0
 pyquery==1.4.3
-pyrsistent==0.16.0
 PySocks==1.7.1
-pytest==6.1.2
 python-dateutil==2.8.1
-python-dotenv==0.15.0
-python-jsonrpc-server==0.3.4
-python-language-server==0.34.1
-pytz==2020.1
-PyWavelets==1.1.1
-pyxdg==0.26
-PyYAML==5.3.1
-pyzmq==19.0.1
-QDarkStyle==2.8.1
-QtAwesome==0.7.2
-qtconsole==4.7.5
-QtPy==1.9.0
+pytz==2021.1
+PyYAML==5.4.1
 ratelim==0.1.6
-rdflib==5.0.0
 readme-renderer==29.0
-regex==2020.11.13
-requests==2.25.0
-requests-file==1.5.1
+regex==2021.7.6
+requests==2.25.1
 requests-toolbelt==0.9.1
 rfc3986==1.5.0
-rope==0.17.0
-Rtree==0.9.4
-ruamel-yaml==0.15.87
-sacremoses==0.0.43
-scikit-image==0.16.2
-scikit-learn==0.23.2
+sacremoses==0.0.45
+scikit-learn==0.24.2
 scipy==1.5.4
-seaborn==0.10.1
-SecretStorage==3.1.2
+SecretStorage==3.3.1
 segtok==1.5.10
 selenium==3.141.0
-Send2Trash==1.5.0
 sentencepiece==0.1.95
-setuptools==57.0.0
-sgmllib3k==1.0.0
-simplegeneric==0.8.1
-singledispatch==3.4.0.3
-six==1.15.0
-smart-open==3.0.0
-snowballstemmer==2.0.0
-sortedcollections==1.2.1
-sortedcontainers==2.2.2
-soupsieve==2.0.1
-spacy==3.0.6
-spacy-alignments==0.8.3
-spacy-legacy==3.0.6
-spacy-transformers==1.0.3
-SPARQLWrapper==1.8.5
-Sphinx==3.1.2
-sphinx-rtd-theme==0.5.2
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==1.0.3
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.4
-sphinxcontrib-websupport==1.2.3
-spyder==4.1.4
-spyder-kernels==1.9.2
-SQLAlchemy==1.3.18
+six==1.16.0
+smart-open==5.1.0
 sqlitedict==1.7.0
-srsly==2.4.1
-stanfordnlp==0.2.0
-stanza==1.2.1
-statsmodels==0.11.1
-sympy==1.6.1
-tables==3.6.1
-tabulate==0.8.7
-tblib==1.6.0
+stanza==1.2.2
+tabulate==0.8.9
 termcolor==1.1.0
-terminado==0.8.3
-testpath==0.4.4
-thinc==8.0.5
-threadpoolctl==2.1.0
-tika==1.24
-tinysegmenter==0.3
-tldextract==3.1.0
+threadpoolctl==2.2.0
 tokenizers==0.10.3
 toml==0.10.2
-toolz==0.10.0
 torch==1.7.1
-tornado==6.0.4
-touch==2020.12.3
-tqdm==4.53.0
-traitlets==4.3.3
-transformers==4.8.1
+tqdm==4.61.2
+transformers==4.8.2
 twine==3.4.1
-typed-ast==1.4.1
-typer==0.3.2
+typed-ast==1.4.3
 typing==3.7.4.3
-typing-extensions==3.7.4.3
-ujson==1.35
-unicodecsv==0.14.1
-Unidecode==1.2.0
-urllib3==1.24.3
-values==2020.12.3
-wasabi==0.8.2
-watchdog==0.10.3
+typing-extensions==3.10.0.0
+urllib3==1.26.6
 wcwidth==0.2.5
 webencodings==0.5.1
-Werkzeug==1.0.1
-wheel==0.34.2
-widgetsnbextension==3.5.1
-wptools==0.4.17
 wrapt==1.12.1
-wurlitzer==2.0.1
-xlrd==1.2.0
-XlsxWriter==1.2.9
-xlwt==1.3.0
-yapf==0.30.0
 yarl==1.6.3
-zict==2.0.0
-zipp==3.4.0
-zope.event==4.4
-zope.interface==4.7.1
+zipp==3.5.0
+zope.interface==5.4.0
