--- a/inria/Code/requirements.txt
+++ b/inria/Code/requirements.txt
@@ -1,111 +1,15 @@
-aiohttp==3.7.4.post0
-astroid==2.6.2
-async-timeout==3.0.1
-attrs==21.2.0
-autopep8==1.5.7
-bleach==3.3.0
-bpemb==0.3.3
-cachetools==4.2.2
-certifi==2021.5.30
-cffi==1.14.6
-chardet==4.0.0
-click==8.0.1
-cloudpickle==1.6.0
-colorama==0.4.4
-cryptography==3.4.7
-cssselect==1.1.0
-cycler==0.10.0
-dataclasses==0.8
 DateTime==4.3
-decorator==4.4.2
-Deprecated==1.2.12
-dicttoxml==1.7.4
-docutils==0.17.1
-filelock==3.0.12
 flair==0.8.0.post1
-ftfy==6.0.3
-future==0.18.2
-gdown==3.12.2
-gensim==3.8.3
-geocoder==1.38.1
-geoip2==4.2.0
-huggingface-hub==0.0.12
-hyperopt==0.2.5
-idna==2.10
-idna-ssl==1.1.0
-importlib-metadata==3.10.1
 ip2geotools==0.1.5
-IP2Location==8.6.2
 ipinfo==4.2.1
-isort==5.9.2
-Janome==0.4.1
-jeepney==0.7.0
-joblib==1.0.1
-keyring==23.0.1
-kiwisolver==1.3.1
-konoha==4.6.5
-langdetect==1.0.9
-lazy-object-proxy==1.6.0
-lxml==4.6.3
-matplotlib==3.3.4
-maxminddb==2.0.3
-mccabe==0.6.1
-mpld3==0.3
-multidict==5.1.0
-networkx==2.5.1
 nltk==3.6.2
 numpy==1.19.5
-overrides==3.1.0
-packaging==21.0
-pandas==1.1.5
-Pillow==8.3.1
-pip-review==1.1.0
-pkg-resources==0.0.0
-pkginfo==1.7.1
-protobuf==3.17.3
-pycodestyle==2.7.0
-pycparser==2.20
-Pygments==2.9.0
-pylint==2.9.3
-pyparsing==2.4.7
-pyquery==1.4.3
-PySocks==1.7.1
-python-dateutil==2.8.1
-pytz==2021.1
-PyYAML==5.4.1
-ratelim==0.1.6
-readme-renderer==29.0
-regex==2021.7.6
-requests==2.25.1
-requests-toolbelt==0.9.1
-rfc3986==1.5.0
-sacremoses==0.0.45
-scikit-learn==0.24.2
-scipy==1.5.4
-SecretStorage==3.3.1
+pandas~=1.3.0
+requests~=2.26.0
 segtok==1.5.10
-selenium==3.141.0
-sentencepiece==0.1.95
-six==1.16.0
-smart-open==5.1.0
-sqlitedict==1.7.0
 stanza==1.2.2
 tabulate==0.8.9
 termcolor==1.1.0
-threadpoolctl==2.2.0
-tokenizers==0.10.3
-toml==0.10.2
-torch==1.7.1
-tqdm==4.61.2
-transformers==4.8.2
-twine==3.4.1
-typed-ast==1.4.3
-typing==3.7.4.3
-typing-extensions==3.10.0.0
-urllib3==1.26.6
-wcwidth==0.2.5
-webencodings==0.5.1
-wrapt==1.12.1
-yarl==1.6.3
-zipp==3.5.0
-zope.interface==5.4.0
+
+pprintpp~=0.4.0
+isodate~=0.6.0
